--- a/.htaccess
+++ b/.htaccess
@@ -18,4 +18,5 @@ RewriteRule ^([_0-9a-zA-Z-]+/)?(.*\.php)$ $2 [L]
 RewriteRule . index.php [L]
 </IfModule>
 
+php_value max_execution_time 300
 # END WordPress
